# scid_bot_3

./: .env.example  .gitignore  ADMIN_DOC.md  DockerFile  Dockerfile  README.md  bot.py.bak  docker-compose.production.yml  docker-compose.yml  edit_bd.py  main.py  makefile  nginx.conf  pyproject.toml  requirements.txt  setup.cfg  telegram_bot.db  test.py
.github/workflows/: main.yml
CRUD/: about_crud.py  category_product.py  feedback_crud.py  info_crud.py  portfolio_projects_crud.py  product_crud.py  user_crud.py
alembic/: README  env.py
alembic/versions/: 09a2d56ae604_first_commit.py  0a73f874352d_update_user_model.py  182d5908e82a_update_user_model.py  31916cbb37e1_update_user_contactmanager_models.py  389fdfebab65_add_new_model_contact_manager.py  3aef62a6d6a1_fix.py  3fe28ef6d0c4_first_commit.py  42e8d0d2bdd4_change_all_model_name_fields_to_name.py  726f3c66f8d4_test_commit.py  83d9728229ea_fix_user_feedback_relationship.py  a204e877ef3b_first_migration.py  d2365dc6d2ca_merge_2_direction.py  da985c622924_update_question_enum.py  e15690914928_first_migration.py
app/: alembic.ini  bot_setup.py  const.py  constants.py  helpers.py  main.py  models.py  scripts_for_db.py  set_admin.py  test.py
app/admin/: admin_settings.py  utils.py
app/alembic/: README  env.py
app/bot/: bot_const.py  callbacks.py  exceptions.py  feedback_context.py  fsm_context.py  handlers.py  keyborads.py  smtp.py  validators.py
app/core/: base.py  bot_setup.py  db.py  init_db.py  settings.py
app/crud/: __init__.py  about_crud.py  base_crud.py  category_product.py  feedback.py  feedback_crud.py  info_crud.py  portfolio_projects_crud.py  product_crud.py  projects.py  questions.py  request_to_manager.py  timer.py  user_crud.py  users.py
app/loggers/: log.py
db/: base.py  db_base.py  init_db.py
filters/: filters.py
handlers/: user.py  validators.py
keyboards/: keyboards.py
middlewares/: session_middleware.py
models/: __init__.py  models.py
redisdata/: dump.rdb
tests/: test_crud.py  test_helpers.py
(+58 files in other folders)
