[tool.poetry]
name = "scid-bot-3"
version = "0.1.0"
description = ""
authors = ["Kseniya Tetercheva <snegurka.tkd@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
aiogram = "^3.13.1"
pydantic = "^2.9.2"
python-dotenv = "^1.0.1"
alembic = "^1.13.2"
sqlalchemy = "^2.0.35"
pydantic-settings = "^2.5.2"
asyncpg = "^0.29.0"
aiosmtplib = "^3.0.2"
make = "^0.1.6.post2"
black = "^24.10.0"
pytest = "^8.0.0"
pytest-asyncio = "^0.24.0"
pytest-mock = "^3.6.1"
redis = "^5.1.1"

[tool.poetry.group.dev.dependencies]
aiosqlite = "^0.20.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
